--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "escola_api_drf"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "3.0.7"
+djangorestframework = "^3.14.0"
+markdown = "^3.5.1"
 
 
 [build-system]
