--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,46 @@ version = "0.1.0"
 description = ""
 authors = ["arturj <arturjardel9@gmail.com>"]
 readme = "README.md"
-packages = [{include = "escola_api_drf"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "3.0.7"
 djangorestframework = "^3.14.0"
 markdown = "^3.5.1"
+uuid = "^1.30"
+taskipy = "^1.12.0"
+isort = "^5.12.0"
+ruff = "^0.1.5"
+blue = "^0.9.1"
+psycopg2-binary = "^2.9.9"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 79
+exclude = ['.venv', 'migrations']
+
+[tool.isort]
+profile = "black"
+line_length = 79
+extend_skip = ['migrations']
+
+[tool.pytest.ini_options]
+pythonpath = "."
+
+[tool.blue]
+extend-exclude = '(migrations/)'
+
+[tool.taskipy.tasks]
+lint = 'ruff . && blue --check . --diff'
+format = 'blue .  && isort .'
+run = 'python3 manage.py runserver'
+make = 'python3 manage.py makemigrations'
+migrate = 'python3 manage.py migrate'
+pre_test = 'task lint'
+test = 'pytest -s -x --cov=escola_api_drf -vv'
+post_test = 'coverage html'
