[feat]: Terminando permissões e cors

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Media
+media_root/
+
 # User-specific files
 *.rsuser
 *.suo
