--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ gunicorn = "^21.2.0"
 faker = "^24.14.1"
 validate-docbr = "^1.10.0"
 text-unidecode = "^1.3"
+django-cors-headers = "3.5.0"
+pillow = "^10.3.0"
 
 
 [build-system]
