--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ validate-docbr = "^1.10.0"
 text-unidecode = "^1.3"
 django-cors-headers = "3.5.0"
 pillow = "^10.3.0"
+django-redis = "4.12.1"
 
 
 [build-system]
