--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ text-unidecode = "^1.3"
 django-cors-headers = "3.5.0"
 pillow = "^10.3.0"
 django-redis = "4.12.1"
+djangorestframework-xml = "^2.0.0"
 
 
 [build-system]
